fix elasticsearch errors